Added gulp task for typescript

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "mithril": "~0.2.0",
     "visibilityjs": "~1.2.1",
     "HTML5-Desktop-Notifications": "html5-desktop-notifications#*",
-    "bootstrap": "v4.0.0-alpha",
+    "bootstrap": "v4.0.0-alpha.2",
     "bootstrap-markdown": "master",
     "font-awesome": "Font-Awesome#~4.4.0",
     "jquery-textcomplete": "~0.8.1",
